[Home] fix content overflow issue

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -64,8 +64,7 @@
 /* Styles for extra LARGE devices (996px and above) */
 @media (min-width: 996px) {
     .home-container {
-        padding: 50px 180px;
-        height: 100vh;
+        padding: 50px 100px;
     
         h3 {
             margin: 0 20px;
